--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -33,7 +33,7 @@
     {% if current_selection %}
       {% set page_type='report' %}
       {% include 'common/legend.html' with context %}
-      <div style="overflow-x:auto;">
+      <div style="overflow-x:auto;min-height: 500px;">
         <table class="complex_datatable">
           <caption>
             <b>Current selection</b>:
