--- a/art12/templates/common/species_table_eu_header_2018.html
+++ b/art12/templates/common/species_table_eu_header_2018.html
@@ -11,40 +11,76 @@
     <th colspan="15">Breeding population</th>
     <th colspan="10">Breeding distribution</th>
     <th colspan="12">Winter population</th>
-    <th colspan="3" rowspan="2" title="EU population status">EU population status</th>
-    <th rowspan="2" title="Contribution to Target 1(ii) of EU Biodiversity Strategy to 2020:
+    <th rowspan="2" title="EU population status">EU population status</th>
+    <th colspan="2" rowspan="2" title="Contribution to Target 1(ii) of EU Biodiversity Strategy to 2020:
                            A - 'Secure' population status
                            B - not 'Secure', but 'improving'
                            C - neither 'Secure' nor 'improving'
                            E - 'Unknown' population status">Contribution<br>to Target 1</th>
-                           <th rowspan="2" data-tooltip-place="sw" 
-                               title="Data on which 2020 EU population status category was based: 
-                                      B - breeding-season data
-                                      W - winter data">Season</th>
+    <th colspan="2" rowspan="2" data-tooltip-place="sw" title="Data on which 2020 EU population status category was based:
+                                                    B - breeding-season data
+                                                    W - winter data">Season</th>
     <th rowspan="2" title="EU population status category from previous (2008–2012) reporting period">
-        Previous status
+      Previous status
+    </th>
+    <th colspan="2" rowspan="2">
+      Ssp. / subsp. unit
     </th>
   </tr>
 
   <tr>
     {# Breeding population #}
-    <th colspan="3">Population size (min)</th>
-    <th colspan="3">Population size (max)</th>
-    <th colspan="2">Unit</th>
+    <th colspan="3" title="Estimate of minimum overall EU population size">Population size (min)</th>
+    <th colspan="3" title="Estimate of maximum overall EU population size">Population size (max)</th>
+    <th colspan="3" title="Population size unit:
+                            bfemales - breeding females
+                            cmales - calling (or lekking) males
+                            i - individuals
+                            p - breeding pairs">Unit</th>
 
-    <th colspan="3">Short-term trend</th>
-    <th colspan="4">Long-term trend</th>
+    <th colspan="3" title="Overall EU short-term population trend (c.2007–2018), direction and magnitude (if available)
+                            -: decreasing
+                            +: increasing
+                            =: stable
+                            f: fluctuating
+                            x: unknown">Short-term trend</th>
+    <th colspan="3" title="Overall EU long-term population trend (c.1980–2018), direction and magnitude (if available)
+                            -: decreasing
+                            +: increasing
+                            =: stable
+                            f: fluctuating
+                            x: unknown">Long-term trend</th>
 
     {# Breeding Range #}
-    <th colspan="3">Area</th>
-    <th colspan="3">Short-term trend</th>
-    <th colspan="4">Long-term trend</th>
-
+    <th colspan="3" title="Overall EU breeding distribution surface area, in km²">Area</th>
+    <th colspan="3" title="Overall EU short-term distribution trend (c.2007–2018), direction and magnitude (if available)
+                            -: decreasing
+                            +: increasing
+                            =: stable
+                            f: fluctuating
+                            x: unknown">Short-term trend</th>
+    <th colspan="4" title="Overall EU long-term distribution trend (c.1980–2018), direction and magnitude (if available)
+                            -: decreasing
+                            +: increasing
+                            =: stable
+                            f: fluctuating
+                            x: unknown">Long-term trend</th>
     {# Winter population #}
-    <th colspan="3">Population size (min)</th>
-    <th colspan="3">Population size (max)</th>
-    <th colspan="2">Unit</th>
-    <th colspan="2">Short-term trend</th>
-    <th colspan="2">Long-term trend</th>
+    <th colspan="3" title="Estimate of minimum overall EU population size">Population size (min)</th>
+    <th colspan="3" title="Estimate of maximum overall EU population size">Population size (max)</th>
+    <th colspan="2" title="Population size unit:
+                            i - individuals">Unit</th>
+    <th colspan="2" title="Overall EU short-term population trend (c.2007–2018), direction and magnitude (if available)
+                            -: decreasing
+                            +: increasing
+                            =: stable
+                            f: fluctuating
+                            x: unknown">Short-term trend</th>
+    <th colspan="2" title="Overall EU long-term population trend (c.1980–2018), direction and magnitude (if available)
+                            -: decreasing
+                            +: increasing
+                            =: stable
+                            f: fluctuating
+                            x: unknown">Long-term trend</th>
   </tr>
 </tbody>
