--- a/art12/templates/summary/eu/content_2018.html
+++ b/art12/templates/summary/eu/content_2018.html
@@ -1,72 +1,77 @@
+<td>EU28</td>
+
 {# Breeding population #}
 <td colspan="3" class="default-td border_left">
-    {{ row.br_population_size or '' }} {{ row.br_population_size_unit or '' }}
+  {{ row.br_population_minimum_size or '' }}
 </td>
 
-<td colspan="3"
-    class="trend-{{ TREND_CLASSES.get(row.br_population_trend) }} text-center">
+<td colspan="3" class="default-td border_left text-center">
+  {{ row.br_population_maximum_size or '' }}
+</td>
+
+<td colspan="3" class="default-td border_left text-center">
+  {{ row.br_population_size_unit or '' }}
+</td>
+
+<td colspan="3" class="trend-{{ TREND_CLASSES.get(row.br_population_trend) }} border_left">
   <span class="conclusion">
     {{ row.br_population_trend or '' }}
   </span>
 </td>
 
-<td colspan="2"
-    class="trend-{{ TREND_CLASSES.get(row.br_population_trend_long) }} text-center">
+<td colspan="3" class="trend-{{ TREND_CLASSES.get(row.br_population_trend_long) }} border_left">
   <span class="conclusion">
     {{ row.br_population_trend_long or '' }}
   </span>
 </td>
 
-<td colspan="3"></td>
-
-<td colspan="4"></td>
-
 {# Breeding distribution #}
 <td colspan="3" class="center border_left">
-  {{ row.br_range_surface_area_downrounded or '' }}
+  {{ row.br_distribution_surface_area or '' }}
 </td>
 
 <td colspan="3"
-    class="trend-{{ TREND_CLASSES.get(row.br_range_trend) }} text-center">
+    class="trend-{{ TREND_CLASSES.get(row.br_distribution_trend) }} text-center border_left">
   <span class="conclusion">
-    {{ row.br_range_trend or '' }}
+    {{ row.br_distribution_trend or '' }}
   </span>
 </td>
 
 <td colspan="4"
-    class="trend-{{ TREND_CLASSES.get(row.br_range_trend_long) }} text-center">
+    class="trend-{{ TREND_CLASSES.get(row.br_distribution_trend_long) }} text-center border_left">
   <span class="conclusion">
-    {{ row.br_range_trend_long or '' }}
+    {{ row.br_distribution_trend_long or '' }}
   </span>
 </td>
 
 {# Winter population #}
 <td colspan="3" class="default-td border_left">
-  {{ row.wi_population_size or '' }} {{ row.wi_population_size_unit or '' }}
+  {{ row.wi_population_minimum_size or '' }}
 </td>
 
-<td colspan="3"
-    class="trend-{{ TREND_CLASSES.get(row.wi_population_trend) }} text-center">
+<td colspan="3" class="default-td border_left">
+  {{ row.wi_population_maximum_size or '' }}
+</td>
+
+<td colspan="2" class="default-td border_left">
+  {{ row.wi_population_size_unit or '' }}
+</td>
+
+<td colspan="2"
+    class="trend-{{ TREND_CLASSES.get(row.wi_population_trend) }} text-center border_left">
   <span class="conclusion">
-    {{ row.wi_population_trend or '' }}
+    {{ row.wi_population_trend or  '' }}
   </span>
 </td>
 
 <td colspan="2"
-    class="trend-{{ TREND_CLASSES.get(row.wi_population_trend_long) }} text-center">
+    class="trend-{{ TREND_CLASSES.get(row.wi_population_trend_long) }} text-center border_left">
   <span class="conclusion">
-    {{ row.wi_population_trend_long or '' }}
+    {{ row.wi_population_trend_long or  '' }}
   </span>
 </td>
 
-<td colspan="2"></td>
-
-<td colspan="2"></td>
-
-<td colspan="3"></td>
-
-
-{# Winter population #}
+{# EU population status	#}
 
 <td class="center border_left status-{{ STATUS_CLASSES.get(row.conclusion_status_label) }} text-center">
   <span class="conclusion">
@@ -74,17 +79,27 @@
   </span>
 </td>
 
-<td class="center">
-  {{ row.contribution_target1_label or '' }}
+{# Contribution to Target 1 #}
+
+<td colspan="2" class="default-td border_left">
+  {{ row.contribution_target1 or '' }}
 </td>
 
-<td class="center">
+{# Season #}
+
+<td colspan="2" class="default-td border_left">
   {{ row.conclusion_status_br_wi or '' }}
 </td>
 
-<!-- <td class="center" title="{{ row.conclusion_status_level2 }}">
-  {{ row.conclusion_status_level2_record or '' }}
+{# Previous status #}
+<td class="trend-{{ TREND_CLASSES.get(row.conclusion_status_label_prev) }} border_left">
+  <span class="conclusion">
+    {{ row.conclusion_status_label_prev or '' }}
+  </span>
 </td>
-<td class="center" title="{{ row.conclusion_status_level1 }}">
-  {{ row.conclusion_status_level1_record or '' }}
-</td> -->
+
+{# Ssp. /subsp. unit #}
+
+<td colspan="2" class="default-td border_left">
+  {{ row.speciesname_subpopulation or '' }}
+</td>
