[refs #116684] Fix a few issues in eu table for period 2018

--- a/art12/templates/common/species_table_eu_header.html
+++ b/art12/templates/common/species_table_eu_header.html
@@ -1,3 +1,9 @@
+<tbody>
+  <tr style="display:inline-block;">
+
+  </tr>
+</tbody>
+
 <tbody class="thead" id="manual-thead">
 
 <tr class="section-header">
