--- a/art12/templates/common/species_table_eu_header_2018.html
+++ b/art12/templates/common/species_table_eu_header_2018.html
@@ -1,3 +1,9 @@
+<tbody>
+  <tr style="display:inline-block;">
+
+  </tr>
+</tbody>
+
 <tbody class="thead" id="manual-thead">
   <tr class="section-header">
     <th class="table-title" colspan="{{ colspan_all }}">
@@ -10,20 +16,20 @@
     <th rowspan="2"></th>
     <th colspan="15">Breeding population</th>
     <th colspan="10">Breeding distribution</th>
-    <th colspan="12">Winter population</th>
-    <th rowspan="2" title="EU population status">EU population status</th>
-    <th colspan="2" rowspan="2" title="Contribution to Target 1(ii) of EU Biodiversity Strategy to 2020:
+    <th colspan="16">Winter population</th>
+    <th rowspan="2" title="EU population status">EU population <br> status</th>
+    <th colspan="1" rowspan="2" title="Contribution to Target 1(ii) of EU Biodiversity Strategy to 2020:
                            A - 'Secure' population status
                            B - not 'Secure', but 'improving'
                            C - neither 'Secure' nor 'improving'
                            E - 'Unknown' population status">Contribution<br>to Target 1</th>
-    <th colspan="2" rowspan="2" data-tooltip-place="sw" title="Data on which 2020 EU population status category was based:
+    <th colspan="1" rowspan="2" data-tooltip-place="sw" title="Data on which 2020 EU population status category was based:
                                                     B - breeding-season data
                                                     W - winter data">Season</th>
     <th rowspan="2" title="EU population status category from previous (2008–2012) reporting period">
       Previous status
     </th>
-    <th colspan="2" rowspan="2">
+    <th colspan="1" rowspan="2">
       Ssp. / subsp. unit
     </th>
   </tr>
@@ -66,9 +72,9 @@
                             f: fluctuating
                             x: unknown">Long-term trend</th>
     {# Winter population #}
-    <th colspan="3" title="Estimate of minimum overall EU population size">Population size (min)</th>
-    <th colspan="3" title="Estimate of maximum overall EU population size">Population size (max)</th>
-    <th colspan="2" title="Population size unit:
+    <th colspan="4" title="Estimate of minimum overall EU population size">Population size (min)</th>
+    <th colspan="4" title="Estimate of maximum overall EU population size">Population size (max)</th>
+    <th colspan="4" title="Population size unit:
                             i - individuals">Unit</th>
     <th colspan="2" title="Overall EU short-term population trend (c.2007–2018), direction and magnitude (if available)
                             -: decreasing
