--- a/eea_integration/layout/templates/layout_default.html
+++ b/eea_integration/layout/templates/layout_default.html
@@ -3,6 +3,8 @@
   <head>
     <title>{% block title %}{% endblock %}</title>
     {% block extra_head %}{% endblock %}
+    {% block extra_style %}{% endblock %}
+
   </head>
 
   <body>
