[refs #117650] Import database and correct field type

--- a/art12/templates/summary/content/content_2018.html
+++ b/art12/templates/summary/content/content_2018.html
@@ -203,7 +203,7 @@
 {# Breeding area/gridded maps #}
 
 <td class="center border_right">
-  {{ row.distribution_grid_area|int or '' }}
+  {{ row.distribution_grid_area }}
 </td>
 
 <td class="center border_right">
