--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -93,15 +93,16 @@
           {% endif %}
           <tbody>
           {% for row in eu_objects %}
-            <tr class="stripe_row {% if row.additional_record %}italic_row{% endif %}">
               {% if dataset.id == 3 %}
-                {% include 'summary/eu/content_2018.html' with context %}
+                <tr class="stripe_row {% if row.use_for_statistics == 0 %}italic_row{% endif %}">
+                  {% include 'summary/eu/content_2018.html' with context %}
               {% else %}
-                <td {% if row.additional_record %}title="Additional assessment at the subspecies level for subspecies listed in the Annexes of the Birds Directive"{% endif %}>{{ EU_COUNTRY }}</td>
-                {% include 'summary/eu/population_bs.html' with context %}
-                {% include 'summary/eu/range.html' with context %}
-                {% include 'summary/eu/population_ws.html' with context %}
-                {% include 'summary/eu/status.html' with context %}
+                <tr class="stripe_row {% if row.additional_record %}italic_row{% endif %}">
+                  <td {% if row.additional_record %}title="Additional assessment at the subspecies level for subspecies listed in the Annexes of the Birds Directive"{% endif %}>{{ EU_COUNTRY }}</td>
+                  {% include 'summary/eu/population_bs.html' with context %}
+                  {% include 'summary/eu/range.html' with context %}
+                  {% include 'summary/eu/population_ws.html' with context %}
+                  {% include 'summary/eu/status.html' with context %}
               {% endif %}
             </tr>
           {% endfor %}
