Update  EU population status table

--- a/art12/static/css/art12.css
+++ b/art12/static/css/art12.css
@@ -115,6 +115,10 @@ th.gray-cell {
     color: #666 !important;
 }
 
+.bold-font {
+  font-weight: 700;
+  font-family: 'Roboto';
+}
 .italic_row td {
     font-style: italic;
 }
