--- a/art12/templates/common/species_table_eu_header_2018.html
+++ b/art12/templates/common/species_table_eu_header_2018.html
@@ -17,15 +17,16 @@
     <th colspan="15">Breeding population</th>
     <th colspan="10">Breeding distribution</th>
     <th colspan="16">Winter population</th>
-    <th rowspan="2" title="EU population status">EU population <br> status</th>
+    <th colspan="2" title="EU population status category (2020)">EU population <br> status</th>
     <th colspan="1" rowspan="2" title="Contribution to Target 1(ii) of EU Biodiversity Strategy to 2020:
-                           A - 'Secure' population status
-                           B - not 'Secure', but 'improving'
-                           C - neither 'Secure' nor 'improving'
-                           E - 'Unknown' population status">Contribution<br>to Target 1</th>
+                                        A - 'Secure' population status
+                                        B - not 'Secure', but 'improving'
+                                        C - neither 'Secure' nor 'improving'
+                                        E - 'Unknown' population status
+                                        N/A - not applicable">Contribution<br>to Target 1</th>
     <th colspan="1" rowspan="2" data-tooltip-place="sw" title="Data on which 2020 EU population status category was based:
-                                                    B - breeding-season data
-                                                    W - winter data">Season</th>
+                                                                B: breeding-season data
+                                                                W: winter -season data">Season</th>
     <th rowspan="2" title="EU population status category from previous (2008–2012) reporting period">
       Previous status
     </th>
@@ -49,13 +50,15 @@
                             +: increasing
                             =: stable
                             f: fluctuating
-                            x: unknown">Short-term trend</th>
+                            x: unknown
+                            NE: not evaluated">Short-term trend</th>
     <th colspan="3" title="Overall EU long-term population trend (c.1980–2018), direction and magnitude (if available)
                             -: decreasing
                             +: increasing
                             =: stable
                             f: fluctuating
-                            x: unknown">Long-term trend</th>
+                            x: unknown
+                            NE: not evaluated">Long-term trend</th>
 
     {# Breeding Range #}
     <th colspan="3" title="Overall EU breeding distribution surface area, in km²">Area</th>
@@ -64,13 +67,15 @@
                             +: increasing
                             =: stable
                             f: fluctuating
-                            x: unknown">Short-term trend</th>
+                            x: unknown
+                            NE: not evaluated">Short-term trend</th>
     <th colspan="4" title="Overall EU long-term distribution trend (c.1980–2018), direction and magnitude (if available)
                             -: decreasing
                             +: increasing
                             =: stable
                             f: fluctuating
-                            x: unknown">Long-term trend</th>
+                            x: unknown
+                            NE: not evaluated">Long-term trend</th>
     {# Winter population #}
     <th colspan="4" title="Estimate of minimum overall EU population size">Population size (min)</th>
     <th colspan="4" title="Estimate of maximum overall EU population size">Population size (max)</th>
@@ -81,12 +86,18 @@
                             +: increasing
                             =: stable
                             f: fluctuating
-                            x: unknown">Short-term trend</th>
+                            x: unknown
+                            NE: not evaluated">Short-term trend</th>
     <th colspan="2" title="Overall EU long-term population trend (c.1980–2018), direction and magnitude (if available)
                             -: decreasing
                             +: increasing
                             =: stable
                             f: fluctuating
-                            x: unknown">Long-term trend</th>
+                            x: unknown
+                            NE: not evaluated">Long-term trend</th>
+
+    {# EU population status #}
+    <th colspan="1" title="Estimate of minimum overall EU population size">Breeding</th>
+    <th colspan="1" title="Estimate of minimum overall EU population size">Wintering</th>
   </tr>
 </tbody>
