[refs #101629] Add reported name to etc birds eu

--- a/art12/templates/summary/eu/content_2018.html
+++ b/art12/templates/summary/eu/content_2018.html
@@ -110,5 +110,5 @@
 {# Ssp. /subsp. unit #}
 
 <td class="default-td border_left">
-  {{ row.speciesname_subpopulation or '' }}
+  {{ row.reported_name or '' }}
 </td>
