--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -13,7 +13,7 @@
     <h1>Species trends at the Member State level</h1>
 
     <p>
-      Choose a period and a species.
+      Choose a period and a country:
     </p>
 
     {% if dataset.id == 2 %}
