--- a/art12/templates/common/legend.html
+++ b/art12/templates/common/legend.html
@@ -37,7 +37,13 @@
     </dd>
 
     <dt class="trend-u">
-      <abbr title="Uncertain" class="conclusion">U</abbr>
+      <abbr title="Uncertain" class="conclusion">
+        {% if dataset.id == 3 %}
+          u
+        {% else %}
+          U
+        {% endif %}
+      </abbr>
     </dt>
     <dd>
       Uncertain
@@ -54,20 +60,31 @@
 </div>
 <p>
   {% if page_type == 'progress' %}
-    The EU population status assessment was carried out at the species level.
-    The EU status assessment can cover several subspecies/subspecific units,
-    which are listed on mouse over the Bird status symbol. The EU trends were
-    assessed at the subspecies level. The EU trends can cover several
-    subspecific units, which are listed on mouse over the Trend symbol.
+    {% if dataset.id == 3 %}
+      <p>
+        Globally the EU population status assessment was carried out at the species level.
+        For subspecies included in the Annexes of the Directive, for subspecies or populations
+        with the international species action plan and for their subspecific counterparts
+        an additional assessment at the subspecies or population level was carried out.
+      </p>
+      <p>Both, species and subspecies level assessments, are provided in the list below.</p>
+    {% else %}
+      The EU population status assessment was carried out at the species level.
+      The EU status assessment can cover several subspecies/subspecific units,
+      which are listed on mouse over the Bird status symbol. The EU trends were
+      assessed at the subspecies level. The EU trends can cover several
+      subspecific units, which are listed on mouse over the Trend symbol.
 
-    <p>
-      In italics, additional assessment at the subspecies or population
-      level (available only for subspecies listed in the Annexes of
-      the Birds Directive).
-    </p>
-
+      <p>
+        In italics, additional assessment at the subspecies or population
+        level (available only for subspecies listed in the Annexes of
+        the Birds Directive).
+      </p>
+    {% endif %}
   {% else %}
-    Please note that additional information on mouse over values and trends
-    stands for the quality of the underlying data as reported by Member States.
+    {% if dataset.id != 3 %}
+      Please note that additional information on mouse over values and trends
+      stands for the quality of the underlying data as reported by Member States.
+    {% endif %}
   {% endif %}
 </p>
