--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -1,23 +1,23 @@
 {% extends 'layout.html' %}
 
 {% block extra_style %}
-<style>
-  table.complex_datatable {
-    border-left: none !important;
-  }
+  <style>
+    table.complex_datatable {
+      border-left: none !important;
+    }
 
-  .complex_datatable .table-separator:after {
-    content: none !important;
-  }
-
-</style>
+    .complex_datatable .table-separator:after {
+      content: none !important;
+    }
+  </style>
 {% endblock %}
 
 {% block breadcrumbs %}
   {% from 'common/_macros.html' import breadcrumbs %}
   {{ breadcrumbs(APP_BREADCRUMBS + [
       ('Species summary', None),
-    ]) }}
+    ])
+  }}
 {% endblock %}
 
 
@@ -25,17 +25,24 @@
   <div tabindex="1">
     <h1>Population status and trends at the EU and Member State levels</h1>
 
-    <p>
-      Choose a period and a species.
+    <p>The Article 12 web tool provides an access to EU assessments and Member States’ data compiled
+       as part of the Habitats Directive - Article 12 reporting process. The EU assessments have been
+       carried out in EU 27 for the period 2008-2012 and in EU28 for the period 2013-2018.
     </p>
-  {% if dataset.id == 2 %}
-  <p class="note">
-    IMPORTANT: 2008-2012bis reporting period displays data from the delayed delivery by Greece
-    (where relevant) together with data from other Member States used for the EU population status
-    assessment in 2014. EU population status assessment is not available for 2008-2012bis period.
-    Where relevant the map includes the information from the delayed delivery by Greece.
-  </p>
-  {% endif %}
+    <p>Choose period, species and if relevant sub-specific unit.</p>
+    <p>Once a selection has been made the breeding distribution of the species can be visualized in a map.</p>
+    <p>The ‘Data sheet info’ includes notes for each assessment per species.</p>
+    <p>The ‘Audit trail’ includes the methods used for the EU assessment and justifications for decisions made by the assessors.</p>
+
+    {% if dataset.id == 2 %}
+      <p class="note">
+        IMPORTANT: 2008-2012bis reporting period displays data from the delayed delivery by Greece
+        (where relevant) together with data from other Member States used for the EU population status
+        assessment in 2014. EU population status assessment is not available for 2008-2012bis period.
+        Where relevant the map includes the information from the delayed delivery by Greece.
+      </p>
+    {% endif %}
+
     {% include 'summary/filters.html' %}
 
     {% if dataset.id == 3 %}
@@ -109,18 +116,18 @@
           </tbody>
         </table>
       </div>
-      <p>
-        The hash sign (#) under Subspecies/subspecific units-Trends or Status
-        means that the EU population trends or EU status were not assessed at
-        the same level as the current selection (species and subspecific unit).
-      </p>
-      <p>
-        In italics, additional assessment at the subspecies or population
-        level (available only for subspecies listed in the Annexes of
-        the Birds Directive).
-      </p>
-    {% else %}
-      <p><b>Please select a species.</b></p>
+      {% if dataset.id != 3 %}
+        <p>
+          The hash sign (#) under Subspecies/subspecific units-Trends or Status
+          means that the EU population trends or EU status were not assessed at
+          the same level as the current selection (species and subspecific unit).
+        </p>
+        <p>
+          In italics, additional assessment at the subspecies or population
+          level (available only for subspecies listed in the Annexes of
+          the Birds Directive).
+        </p>
+      {% endif %}
     {% endif %}
   </div>
 {% endblock %}
