[refs #101629] Add methodolgy and guideline/add note for period 2013

--- a/art12/templates/homepage.html
+++ b/art12/templates/homepage.html
@@ -14,7 +14,8 @@
 
   <p>
     A summary of the methodologies used for the EU population status assessments can be found
-    <a href="">here</a> and a step-by-step guide for using the tool can be found <a href="">here</a>.
+     <a target="_blank" href="{{ url_for('static', filename='documents/Article 12 Assessment tool methodology.pdf') }}">here</a>
+    and a step-by-step guide for using the tool can be found <a target="_blank" href="{{ url_for('static', filename='documents/Article 12 assessment tool step by step guidance.pdf') }}">here</a>.
   </p>
 
   <p>
