--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -33,6 +33,18 @@
     {% if current_selection %}
       {% set page_type='report' %}
       {% include 'common/legend.html' with context %}
+      {% if dataset.id == 3 %}
+        <p class="note">
+          Codes ‘PT’, ‘ES ‘correspond to Portugal mainland (excluding Azores-PTAC and Madeira-PTMA) and Spain
+          mainland (excluding Canary Islands-ESIC) respectively.
+          </br>
+          Similarly ‘UK’ stands for the United Kingdom
+          of Great Britain and Northern Ireland (excluding Gibraltar-GIB).
+          </br>
+          The data from delayed delivery by Romania are not shown in the Member States reports table
+          and were not used for the EU population status assessment.
+        </p>
+      {% endif %}
       <div style="overflow-x:auto;min-height: 500px;">
         <table class="complex_datatable">
           <caption>
