Disable download factsheets for period 2013

--- a/art12/templates/summary/buttons.html
+++ b/art12/templates/summary/buttons.html
@@ -28,7 +28,7 @@
     </button>
   {% endif %}
   
-  {% if dataset.id != 2 %}
+  {% if dataset.id != 2 and dataset.id != 3 %}
     {% if factsheet_url %}
       <a href="{{ factsheet_url }}" target="_blank" class="button">Download factsheet</a>
     {% else %}
