[refs #128838] Change warning for Romania

--- a/art12/templates/reports/species.html
+++ b/art12/templates/reports/species.html
@@ -41,8 +41,7 @@
           Similarly ‘UK’ stands for the United Kingdom
           of Great Britain and Northern Ireland (excluding Gibraltar-GIB).
           </br>
-          The data from delayed delivery by Romania are not shown in the Member States reports table
-          and were not used for the EU population status assessment.
+          The data from delayed delivery by Romania were not used for the EU population status assessment.
         </p>
       {% endif %}
       <div style="overflow-x:auto;min-height: 500px;">
