[refs #135807] Fix remaining bugs from upgrade

--- a/art12/templates/config.html
+++ b/art12/templates/config.html
@@ -19,8 +19,7 @@
       <div class="warning">You have submitted an invalid CSRF token</div>
     {% endif %}
 
-    {#    {{ form.csrf_token() }}#}
-    <input type="hidden" name="csrf_token" value="">
+    {{ form.csrf_token() }}
 
     <div class="form-group">
       {{ render_field_with_errors(form.default_dataset_id) }}
