--- a/eea_integration/auth/templates/auth/register_ldap.html
+++ b/eea_integration/auth/templates/auth/register_ldap.html
@@ -35,7 +35,8 @@
             </div>
           {% endif %}
 
-          {{ register_user_form.hidden_tag() }}
+          {{ register_user_form.csrf_token() }}
+
           {{ register_user_form.MS() }}
 
           <!-- INSTITUTION -->
